Updated information on User Views

--- a/Family budget/Views/User/Details.cshtml
+++ b/Family budget/Views/User/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Family_budget.Models.User
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "User details";
 }
 
-<h1>Details</h1>
+<h1>User details</h1>
 
 <div>
-    <h4>User</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
