--- a/Family budget/Views/User/Edit.cshtml
+++ b/Family budget/Views/User/Edit.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Family_budget.Models.User
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit user information";
 }
 
-<h1>Edit</h1>
+<h1>Edit user information</h1>
 
-<h4>User</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
