--- a/Family budget/Views/User/Create.cshtml
+++ b/Family budget/Views/User/Create.cshtml
@@ -1,12 +1,11 @@
 ﻿@model Family_budget.Models.User
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create new user";
 }
 
-<h1>Create</h1>
+<h1>Create new user</h1>
 
-<h4>User</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
