--- a/Family budget/Views/User/Delete.cshtml
+++ b/Family budget/Views/User/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model Family_budget.Models.User
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Delete user";
 }
 
 
 <h3>Are you sure you want to delete this USER?</h3>
 <div>
     <hr />
-
     <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Name):
