--- a/Family budget/Views/Shared/_Layout.cshtml
+++ b/Family budget/Views/Shared/_Layout.cshtml
@@ -24,6 +24,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="UserExpense" asp-action="GetIndex">Expenses</a>
+                        </li>
                     </ul>
                 </div>
             </div>
