--- a/Family budget/Views/User/Delete.cshtml
+++ b/Family budget/Views/User/Delete.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<h3>Are you sure you want to delete this USER?</h3>
+<h3>Are you sure you want to delete this USER and ALL related his Expenses?</h3>
 <div>
     <hr />
     <dl class="row">
