Fixed. Task #8 Found on all views possible null-reference items and added a needed check

--- a/Family budget/Views/UserExpense/Edit.cshtml
+++ b/Family budget/Views/UserExpense/Edit.cshtml
@@ -33,7 +33,10 @@
 </div>
 
 <div>
-    <a asp-action="Index" asp-route-id="@Model.User.Id">Back to List</a>
+    @if (Model != null && Model.User != null)
+    {
+        <a asp-action="Index" asp-route-id="@Model.User.Id">Back to List</a>
+    }
 </div>
 
 @section Scripts {
