--- a/Family budget/Views/User/Details.cshtml
+++ b/Family budget/Views/User/Details.cshtml
@@ -18,6 +18,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (Model != null)
+    {
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a>
+    }
+    | <a asp-action="Index">Back to List</a>
 </div>
