--- a/Family budget/Views/UserExpense/Delete.cshtml
+++ b/Family budget/Views/UserExpense/Delete.cshtml
@@ -26,6 +26,9 @@
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="User.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index" asp-route-id="@Model.User.Id">Back to List</a>
+        @if (Model != null && Model.User != null)
+        {
+            <a asp-action="Index" asp-route-id="@Model.User.Id">Back to List</a>
+        }
     </form>
 </div>
