--- a/Family budget/Views/UserExpense/Details.cshtml
+++ b/Family budget/Views/UserExpense/Details.cshtml
@@ -25,6 +25,14 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index" asp-route-id=@Model.User.Id>Back to List</a>
+    @if (Model != null)
+    {
+
+        <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
+        <a> | </a>
+        if (Model.User != null)
+        {
+            <a asp-action="Index" asp-route-id=@Model.User.Id>Back to List</a>
+        }
+    }
 </div>
