--- a/Family budget/Views/Home/Index.cshtml
+++ b/Family budget/Views/Home/Index.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Welcome";
 }
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <p>You can find <a href="https://github.com/v-ivanchuk/Family-budget">the latest Family budget project version on GitHub</a>.</p>
 </div>
