--- a/Family budget/Views/Member/Create.cshtml
+++ b/Family budget/Views/Member/Create.cshtml
@@ -1,10 +1,10 @@
-﻿@model Family_budget.Models.User
+﻿@model Family_budget.PresentationLayer.Models.MemberViewModel
 
 @{
-    ViewData["Title"] = "Create new user";
+    ViewData["Title"] = "Create new member";
 }
 
-<h1>Create new user</h1>
+<h1>Create new member</h1>
 
 <hr />
 <div class="row">
