--- a/Family budget/Views/Member/Edit.cshtml
+++ b/Family budget/Views/Member/Edit.cshtml
@@ -1,7 +1,7 @@
-﻿@model Family_budget.Models.User
+﻿@model Family_budget.PresentationLayer.Models.MemberViewModel
 
 @{
-    ViewData["Title"] = "Edit user information";
+    ViewData["Title"] = "Edit member information";
 }
 
 <h1>Edit user information</h1>
