--- a/Family budget/Views/Member/Index.cshtml
+++ b/Family budget/Views/Member/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Family_budget.Models.User>
+﻿@model IEnumerable<Family_budget.PresentationLayer.Models.MemberViewModel>
 
 @{
-    ViewData["Title"] = "Users";
+    ViewData["Title"] = "Members";
 }
 
-<h1>Users</h1>
+<h1>Members</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -27,7 +27,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="CheckDelete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
