--- a/Family budget/Views/Shared/_Layout.cshtml
+++ b/Family budget/Views/Shared/_Layout.cshtml
@@ -22,10 +22,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="User" asp-action="Index">Users</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Member" asp-action="Index">Members</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="UserExpense" asp-action="GetIndex">Expenses</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Expense" asp-action="GetIndex">Expenses</a>
                         </li>
                     </ul>
                 </div>
