--- a/Family budget/Views/Expense/Delete.cshtml
+++ b/Family budget/Views/Expense/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model Family_budget.Models.UserExpense
+﻿@model Family_budget.PresentationLayer.Models.ExpenseViewModel
 
 @{
     ViewData["Title"] = "Delete expense";
@@ -9,26 +9,26 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Expense)
+            @Html.DisplayNameFor(model => model.Value)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Expense)
+            @Html.DisplayFor(model => model.Value)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CountDate)
+            @Html.DisplayNameFor(model => model.ExpenseDateTime)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CountDate)
+            @Html.DisplayFor(model => model.ExpenseDateTime)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="hidden" asp-for="User.Id" />
+        <input type="hidden" asp-for="Member.Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        @if (Model != null && Model.User != null)
+        @if (Model != null && Model.Member != null)
         {
-            <a asp-action="Index" asp-route-id="@Model.User.Id">Back to List</a>
+            <a asp-action="Index" asp-route-id="@Model.Member.Id">Back to List</a>
         }
     </form>
 </div>
