--- a/Family budget/Views/Expense/GetIndex.cshtml
+++ b/Family budget/Views/Expense/GetIndex.cshtml
@@ -1,10 +1,10 @@
-﻿@model Family_budget.Models.User
+﻿@model Family_budget.PresentationLayer.Models.MemberViewModel
 
 @{
-    ViewData["Title"] = "User Expense";
+    ViewData["Title"] = "Member Expense";
 }
 
-<h1>Please choose the user</h1>
+<h1>Please choose the member</h1>
 
 <div class="row">
     <div class="col-md-4">
@@ -16,7 +16,7 @@
             </div>
 
             <div class="form-group">
-                <input type="submit" value="Select" class="btn btn-primary"/>
+                <input type="submit" value="Select" class="btn btn-primary" />
             </div>
         </form>
     </div>
