--- a/Family budget/Views/Member/CheckDelete.cshtml
+++ b/Family budget/Views/Member/CheckDelete.cshtml
@@ -1,22 +1,22 @@
-﻿@model Family_budget.Models.User
+﻿@model Family_budget.PresentationLayer.Models.MemberViewModel
 
 @{
-    ViewData["Title"] = "Delete user";
+    ViewData["Title"] = "Delete member";
 }
 
 
-<h3>Are you sure you want to delete this USER and ALL related his Expenses?</h3>
+<h3>Are you sure you want to delete this MEMBER and ALL his related Expenses?</h3>
 <div>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Name):
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
         </dd>
     </dl>
-    
+
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
