--- a/Family budget/Views/Member/Details.cshtml
+++ b/Family budget/Views/Member/Details.cshtml
@@ -1,7 +1,7 @@
-﻿@model Family_budget.Models.User
+﻿@model Family_budget.PresentationLayer.Models.MemberViewModel
 
 @{
-    ViewData["Title"] = "User details";
+    ViewData["Title"] = "Member details";
 }
 
 <h1>User details</h1>
