--- a/Family budget/PresentationLayer/Views/Expense/Create.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Create.cshtml
@@ -16,11 +16,11 @@
                 <input asp-for="Value" class="form-control" />
                 <span asp-validation-for="Value" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
-                <label asp-for="CountDate" class="control-label"></label>
-                <input asp-for="CountDate" class="form-control" />
-                <span asp-validation-for="CountDate" class="text-danger"></span>
-            </div>*@
+            <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
