--- a/Family budget/PresentationLayer/Views/Expense/Edit.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Edit.cshtml
@@ -21,6 +21,11 @@
                 <span asp-validation-for="Value" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label asp-for="Description" class="control-label"></label>
+                <input asp-for="Description" class="form-control" />
+                <span asp-validation-for="Description" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ExpenseDateTime" class="control-label"></label>
                 <input asp-for="ExpenseDateTime" class="form-control" />
                 <span asp-validation-for="ExpenseDateTime" class="text-danger"></span>
