--- a/Family budget/PresentationLayer/Views/Expense/Details.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Details.cshtml
@@ -22,17 +22,31 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ExpenseDateTime)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DateCreated)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DateCreated)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.DateUpdated)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.DateUpdated)
+        </dd>
     </dl>
 </div>
 <div>
     @if (Model != null)
     {
-
         <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> 
         <a> | </a>
-        if (Model.Member != null)
-        {
-            <a asp-action="Index" asp-route-id=@Model.Member.Id>Back to List</a>
-        }
+        <a asp-action="Index" asp-route-id=@Model.MemberId>Back to List</a>
     }
 </div>
