--- a/Family budget/PresentationLayer/Views/Expense/Edit.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Edit.cshtml
@@ -4,17 +4,16 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1>Edit Expense</h1>
 
-<h4>UserExpense</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
-            <input type="hidden" asp-for="Member.Id" />
-            <input type="hidden" asp-for="Member.Name" />
+            <input type="hidden" asp-for="MemberId" />
+            @*<input type="hidden" asp-for="Member.Name" />*@
             <div class="form-group">
                 <label asp-for="Value" class="control-label"></label>
                 <input asp-for="Value" class="form-control" />
@@ -38,9 +37,9 @@
 </div>
 
 <div>
-    @if (Model != null && Model.Member != null)
+    @if (Model != null)
     {
-        <a asp-action="Index" asp-route-id="@Model.Member.Id">Back to List</a>
+        <a asp-action="Index" asp-route-id="@Model.MemberId">Back to List</a>
     }
 </div>
 
