--- a/Family budget/PresentationLayer/Views/Expense/Index.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Index.cshtml
@@ -12,7 +12,7 @@
 <p>
     @if (modelId != null)
     {
-        <a asp-action="Create" asp-route-id="@modelId.Member.Id">Create New</a>
+        <a asp-action="Create" asp-route-id="@modelId.MemberId">Create New</a>
     }
 </p>
 
@@ -24,6 +24,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ExpenseDateTime)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
             </th>
             <th></th>
         </tr>
@@ -39,9 +42,12 @@
                     @Html.DisplayFor(modelItem => item.ExpenseDateTime)
                 </td>
                 <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                    <a asp-action="CheckDelete" asp-route-id="@item.Id">Delete</a>
                 </td>
             </tr>
         }
