--- a/Family budget/PresentationLayer/Views/Expense/Index.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Index.cshtml
@@ -12,7 +12,7 @@
 <p>
     @if (modelId != null)
     {
-        <a asp-action="Create" asp-route-id="@modelId.MemberId">Create New</a>
+        <a asp-action="Create" asp-route-memberId="@modelId.MemberId">Create New</a>
     }
 </p>
 
