--- a/Family budget/PresentationLayer/Views/Expense/CheckDelete.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/CheckDelete.cshtml
@@ -20,6 +20,12 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ExpenseDateTime)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Description)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Description)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
@@ -28,7 +34,7 @@
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         @if (Model != null)
         {
-            <a asp-action="Index" asp-route-id="@Model.MemberId">Back to List</a>
+            <a asp-action="Index" asp-route-memberId="@Model.MemberId">Back to List</a>
         }
     </form>
 </div>
