--- a/Family budget/PresentationLayer/Views/Expense/Create.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Create.cshtml
@@ -9,8 +9,13 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form method="post" asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="DateCreated" value="@DateTime.Now" />
+            <input type="hidden" asp-for="DateUpdated" value="@DateTime.Now" />
+            <input type="hidden" asp-for="ExpenseDateTime" value="@DateTime.Now" />
+            <input type="hidden" asp-for="MemberId" value="@ViewData["MemberId"]" />
             <div class="form-group">
                 <label asp-for="Value" class="control-label"></label>
                 <input asp-for="Value" class="form-control" />
