--- a/Family budget/PresentationLayer/Views/Expense/Edit.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Edit.cshtml
@@ -9,11 +9,12 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form method="post" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="MemberId" />
-            @*<input type="hidden" asp-for="Member.Name" />*@
+            <input type="hidden" asp-for="DateCreated" />
+            <input type="hidden" asp-for="DateUpdated" value="@DateTime.Now"/>
             <div class="form-group">
                 <label asp-for="Value" class="control-label"></label>
                 <input asp-for="Value" class="form-control" />
@@ -39,7 +40,7 @@
 <div>
     @if (Model != null)
     {
-        <a asp-action="Index" asp-route-id="@Model.MemberId">Back to List</a>
+        <a asp-action="Index" asp-route-memberId="@Model.MemberId">Back to List</a>
     }
 </div>
 
