--- a/Family budget/PresentationLayer/Views/Expense/GetIndex.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/GetIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model Family_budget.PresentationLayer.Models.MemberViewModel
+﻿@*@model Family_budget.PresentationLayer.Models.MemberViewModel*@
 
 @{
     ViewData["Title"] = "Member Expense";
@@ -9,10 +9,10 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Index">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
 
             <div class="form-group">
-                <select asp-for="Id" asp-items=ViewBag.Category class="form-control"></select>
+                <select name="memberId" asp-items=ViewBag.Category class="form-control"></select>
             </div>
 
             <div class="form-group">
