--- a/Family budget/PresentationLayer/Views/Member/Edit.cshtml
+++ b/Family budget/PresentationLayer/Views/Member/Edit.cshtml
@@ -9,9 +9,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Edit">
+        <form method="post" asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
+            <input type="hidden" asp-for="DateCreated" />
+            <input type="hidden" asp-for="DateUpdated" value="@DateTime.Now"/>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
