--- a/Family budget/PresentationLayer/Views/Member/Edit.cshtml
+++ b/Family budget/PresentationLayer/Views/Member/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit member information";
 }
 
-<h1>Edit user information</h1>
+<h1>Edit member information</h1>
 
 <hr />
 <div class="row">
