--- a/Family budget/PresentationLayer/Views/Member/Index.cshtml
+++ b/Family budget/PresentationLayer/Views/Member/Index.cshtml
@@ -16,10 +16,10 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateCreated)
+                Date Created
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DateUpdated)
+                Date Updated
             </th>
             <th></th>
         </tr>
