--- a/Family budget/PresentationLayer/Views/Expense/Details.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Details.cshtml
@@ -1,13 +1,12 @@
 ﻿@model Family_budget.PresentationLayer.Models.ExpenseViewModel
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Expense Details";
 }
 
-<h1>Details</h1>
+<h1>Expense Details</h1>
 
 <div>
-    <h4>Member Expense</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -17,7 +16,7 @@
             @Html.DisplayFor(model => model.Value)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ExpenseDateTime)
+            @Html.LabelFor(model => model.ExpenseDateTime, "Date of expense")
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.ExpenseDateTime)
@@ -29,13 +28,13 @@
             @Html.DisplayFor(model => model.Description)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreated)
+            @Html.LabelFor(model => model.DateCreated, "Date created")
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateCreated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateUpdated)
+            @Html.LabelFor(model => model.DateUpdated, "Date updated")
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateUpdated)
