--- a/Family budget/PresentationLayer/Views/Expense/Index.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Index.cshtml
@@ -23,7 +23,7 @@
                 @Html.DisplayNameFor(model => model.Value)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ExpenseDateTime)
+                Date of expense
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Description)
