--- a/Family budget/PresentationLayer/Views/Member/CheckDelete.cshtml
+++ b/Family budget/PresentationLayer/Views/Member/CheckDelete.cshtml
@@ -5,7 +5,7 @@
 }
 
 
-<h3>Are you sure you want to delete this MEMBER and ALL his related Expenses?</h3>
+<h3>Are you sure you want to delete this MEMBER and ALL his related EXPENSES?</h3>
 <div>
     <hr />
     <dl class="row">
