--- a/Family budget/PresentationLayer/Views/Member/Details.cshtml
+++ b/Family budget/PresentationLayer/Views/Member/Details.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Member details";
 }
 
-<h1>User details</h1>
+<h1>Member details</h1>
 
 <div>
     <hr />
@@ -16,13 +16,13 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateCreated)
+            @Html.LabelFor(model => model.DateCreated, "Date created")
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateCreated)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DateUpdated)
+            @Html.LabelFor(model => model.DateUpdated, "Date updated")
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.DateUpdated)
