--- a/Family budget/PresentationLayer/Views/Expense/Details.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Details.cshtml
@@ -16,10 +16,10 @@
             @Html.DisplayFor(model => model.Value)
         </dd>
         <dt class = "col-sm-2">
-            @Html.LabelFor(model => model.ExpenseDateTime, "Date of expense")
+            @Html.LabelFor(model => model.ExpenseDate, "Date of expense")
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ExpenseDateTime)
+            @Html.DisplayFor(model => model.ExpenseDate)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Description)
