--- a/Family budget/PresentationLayer/Views/Expense/Index.cshtml
+++ b/Family budget/PresentationLayer/Views/Expense/Index.cshtml
@@ -39,7 +39,7 @@
                     @Html.DisplayFor(modelItem => item.Value)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.ExpenseDateTime)
+                    @Html.DisplayFor(modelItem => item.ExpenseDate)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Description)
