--- a/Family budget/PresentationLayer/Views/Member/Edit.cshtml
+++ b/Family budget/PresentationLayer/Views/Member/Edit.cshtml
@@ -13,7 +13,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="DateCreated" />
-            <input type="hidden" asp-for="DateUpdated" value="@DateTime.Now"/>
+            <input type="hidden" asp-for="DateUpdated" />
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <input asp-for="Name" class="form-control" />
