Added first part of Authentication and Authorization

--- a/Family budget/PresentationLayer/Views/Home/Index.cshtml
+++ b/Family budget/PresentationLayer/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
+    <h1 class="display-4">Welcome @User.Identity.Name</h1>
     <p>You can find <a href="https://github.com/v-ivanchuk/Family-budget">the latest Family budget project version on GitHub</a>.</p>
 </div>
