--- a/Family budget/PresentationLayer/Views/Shared/_Layout.cshtml
+++ b/Family budget/PresentationLayer/Views/Shared/_Layout.cshtml
@@ -27,6 +27,15 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Expense" asp-action="GetIndex">Expenses</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Logout">Logout</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Test">Test</a>
+                        </li>
                     </ul>
                 </div>
             </div>
