--- a/Family budget/PresentationLayer/Views/Account/Login.cshtml
+++ b/Family budget/PresentationLayer/Views/Account/Login.cshtml
@@ -9,8 +9,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" asp-action="Login">
-            <div asp-validation-summary="All" class="text-danger"></div>
+        <form method="post" asp-action="Login" asp-anti-forgery="true">
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Login" class="control-label"></label>
                 <input asp-for="Login" class="form-control" />
