--- a/Family budget/PresentationLayer/Views/Account/Register.cshtml
+++ b/Family budget/PresentationLayer/Views/Account/Register.cshtml
@@ -4,13 +4,12 @@
     ViewData["Title"] = "Register";
 }
 
-<h1>Register</h1>
+<h1>Registration</h1>
 
-<h4>UserViewModel</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post" asp-action="Register">
+        <form method="post" asp-action="Register" asp-anti-forgery="true">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             @*<input type="hidden" asp-for="Id" />
             <input type="hidden" asp-for="DateCreated" />
